# vue-test

./: .eslintignore  index.html  package-lock.json  package.json  vue.config.js
.github/workflows/: deploy.yml
js/: app.079381ed.js  app.079381ed.js.map  app.c31f2bfa.js  app.c31f2bfa.js.map  app.dfb4e7cc.js  app.dfb4e7cc.js.map  chunk-08683cbe.36c97052.js  chunk-08683cbe.36c97052.js.map  chunk-vendors.2aeaec73.js  chunk-vendors.2aeaec73.js.map  chunk-vendors.e5db0827.js  chunk-vendors.e5db0827.js.map
src/: App.vue
src/hello/: Cargo.toml  build.sh
src/hello/src/: lib.rs
